"button spacing fix"

--- a/style.css
+++ b/style.css
@@ -1430,7 +1430,7 @@ hr.invis1 {
 }
 
 .filter-button-group button{
-    margin-top: 5px;
+    margin-top: 10px;
 	color: #333;
 	letter-spacing: 1px;
 	text-transform: uppercase;
